--- a/karavan-app/src/main/resources/application.properties
+++ b/karavan-app/src/main/resources/application.properties
@@ -103,4 +103,9 @@ quarkus.quinoa.package-manager-install=true
 quarkus.quinoa.package-manager-install.node-version=22.9.0
 quarkus.quinoa.dev-server.port=3003
 quarkus.quinoa.dev-server.check-timeout=60000
-quarkus.quinoa.ignored-path-prefixes=/ui,/public
+quarkus.quinoa.ignored-path-prefixes=/ui,/public,/api
+
+# Local
+%local.karavan.image-registry-install=true
+%local.karavan.git-install-gitea=true
+%local.quarkus.http.host=localhost
