--- a/cetai/milestone3/application.properties
+++ b/cetai/milestone3/application.properties
@@ -1,3 +1,4 @@
 quarkus.index-dependency.hello-sender.group-id=com.cetai.kamelet.util
 quarkus.index-dependency.hello-sender.artifact-id=kamelet-util
 myproperty=helloworld
+camel.jbang.dependencies=camel-timer,camel-log,camel-bean,camel-jackson,mvn:com.cetai.kamelet.util:kamelet-util:1.0,mvn:com.cetai.kamelet.sabreinventory.model:sabreinventory-model:1.0
