--- a/cetai/milestone3/transition/application.properties
+++ b/cetai/milestone3/transition/application.properties
@@ -1,2 +1,5 @@
-camel.jbang.dependencies=camel-mapstruct,camel-jackson,com.cetai.milestone3.transition:transition-util:1.0-SNAPSHOT
-camel.component.mapstruct.mapper-package-name=com.cetai.milestone3.transition.mapper
+camel.jbang.dependencies=camel-jackson,camel-bean,mvn:com.cetai.milestone3.transition.util:transition-quarkus:1.0,mvn:com.cetai.kamelet.util:kamelet-util:1.0,mvn:com.cetai.kamelet.sabreinventory.model:sabreinventory-model:1.0
+quarkus.index-dependency.hello-sender.group-id=com.cetai.milestone3.transition.util
+quarkus.index-dependency.hello-sender.artifact-id=transition-quarkus
+myproperty=helloworld
+server.port=8081
