--- a/cetai/milestone3/testkamelet.camel.yaml
+++ b/cetai/milestone3/testkamelet.camel.yaml
@@ -1,3 +1,8 @@
+- beans:
+    - name: adjustInventoryProcessor
+      type: com.cetai.kamelet.util.kameletutil.AdjustInventoryRQConverter
+    - name: productPnrProcessor
+      type: com.cetai.kamelet.util.kameletutil.ProductPnrProcessor  
 - route:
     id: route-bcd9
     nodePrefixId: route-578
