--- a/cetai/milestone3/transition/transition-util/pom.xml
+++ b/cetai/milestone3/transition/transition-util/pom.xml
@@ -77,11 +77,11 @@
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-yaml-dsl</artifactId>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.camel.quarkus.examples</groupId>
             <artifactId>fruit-model</artifactId>
             <version>3.17.0</version>
-        </dependency>
+        </dependency> -->
 
 
         <dependency>
