--- a/cetai/milestone3/kamelet/sabreinventorymark-sink.kamelet.yaml
+++ b/cetai/milestone3/kamelet/sabreinventorymark-sink.kamelet.yaml
@@ -49,7 +49,7 @@ spec:
     - mvn:com.cetai.kamelet.sabreinventory.model:sabreinventory-model:1.0
   template:
     route:
-      id: route-95f2
+      id: route-aa58
       from:
         id: from-8520
         uri: kamelet:source
@@ -60,6 +60,7 @@ spec:
                 id: json-b611
                 library: Jackson
                 unmarshalType: com.cetai.kamelet.sabreinventory.model.ProductPnrVO
+                disableFeatures: FAIL_ON_IGNORED_PROPERTIES,FAIL_ON_UNKNOWN_PROPERTIES
           - process:
               id: process-ba9c
               ref: productPnrProcessor
